<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:text="- - - - - - - - - - - - - - - - - -"
        android:textSize="30dp"
        />
    <TextView
        android:id="@+id/AcademicYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/academic_year"
        android:textSize="19dp"/>

    <TextView
        android:id="@+id/Semester"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/semester"
        android:textSize="19dp"/>

    <TextView
        android:id="@+id/TotalModularCredits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_modular_credits"
        android:textSize="19dp"/>

    <TextView
        android:id="@+id/Modules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modules"
        android:textSize="19dp"/>

    <TextView
        android:id="@+id/textViewView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:paddingTop="10dp"
        android:text="- - - - - - - - - - - - - - - - - -"
        android:textSize="30dp" />

</LinearLayout>